jupyter and seeding

--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "61b5fe13",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c99bf223",
    "metadata": {},
    "outputs": [
@@ -159,19 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "640424a5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SeedExperimentManager' object has no attribute 'simple_random_sample'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Simple random sampling\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m samples = \u001b[43mmanager\u001b[49m\u001b[43m.\u001b[49m\u001b[43msimple_random_sample\u001b[49m(\n\u001b[32m      3\u001b[39m     population_size=\u001b[32m1000\u001b[39m,\n\u001b[32m      4\u001b[39m     sample_size=\u001b[32m100\u001b[39m,\n\u001b[32m      5\u001b[39m     seed=\u001b[32m12345\u001b[39m\n\u001b[32m      6\u001b[39m )\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSample size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(samples)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFirst 10: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28msorted\u001b[39m(samples)[:\u001b[32m10\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'SeedExperimentManager' object has no attribute 'simple_random_sample'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample size: 100\n",
+      "First 10: [3, 6, 10, 24, 27, 41, 79, 93, 101, 108]\n",
+      "Range: 3 to 990\n"
      ]
     }
    ],
@@ -200,24 +198,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "65389faf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SeedExperimentManager' object has no attribute 'stratified_random_sample'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Stratified sampling ensures balanced coverage\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m samples = \u001b[43mmanager\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstratified_random_sample\u001b[49m(\n\u001b[32m      3\u001b[39m     population_size=\u001b[32m1000\u001b[39m,\n\u001b[32m      4\u001b[39m     sample_size=\u001b[32m100\u001b[39m,\n\u001b[32m      5\u001b[39m     n_strata=\u001b[32m10\u001b[39m,\n\u001b[32m      6\u001b[39m     seed=\u001b[32m12345\u001b[39m\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mStratified sample size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(samples)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mExpected per stratum: ~\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[32m100\u001b[39m//\u001b[32m10\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'SeedExperimentManager' object has no attribute 'stratified_random_sample'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stratified sample size: 100\n",
+      "Expected per stratum: ~10\n",
+      "Range: 1 to 991\n",
+      "\n",
+      "Distribution check (first 30):\n",
+      "[1, 20, 24, 34, 38, 47, 53, 55, 72, 93, 115, 122, 123, 133, 147, 155, 170, 171, 178, 180, 211, 221, 245, 252, 264, 267, 274, 293, 294, 294]\n"
      ]
     }
    ],
    "source": [
-    "# Stratified sampling ensures balanced coverage\nsampler = SeedSampler(master_seed=12345)\nsamples = sampler.stratified_random_sampling(\n    n_samples=100,\n    seed_range=(0, 1000),\n    n_strata=10\n)\n\nprint(f\"Stratified sample size: {len(samples)}\")\nprint(f\"Expected per stratum: ~{100//10}\")\nprint(f\"Range: {min(samples)} to {max(samples)}\")\nprint(f\"\\nDistribution check (first 30):\")\nprint(sorted(samples)[:30])"
+    "# Stratified sampling ensures balanced coverage\n",
+    "sampler = SeedSampler(master_seed=12345)\n",
+    "samples = sampler.stratified_random_sampling(\n",
+    "    n_samples=100,\n",
+    "    seed_range=(0, 1000),\n",
+    "    n_strata=10\n",
+    ")\n",
+    "\n",
+    "print(f\"Stratified sample size: {len(samples)}\")\n",
+    "print(f\"Expected per stratum: ~{100//10}\")\n",
+    "print(f\"Range: {min(samples)} to {max(samples)}\")\n",
+    "print(f\"\\nDistribution check (first 30):\")\n",
+    "print(sorted(samples)[:30])"
    ]
   },
   {
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1ed7b13c",
    "metadata": {},
    "outputs": [
@@ -238,9 +249,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tracked seed 1709912838: RMSE=5.469, R²=0.969\n",
-      "Tracked seed 374373719: RMSE=5.230, R²=0.985\n",
-      "Tracked seed 1166838137: RMSE=5.365, R²=0.987\n",
+      "Tracked seed 1709912838: RMSE=5.929, R²=0.955\n",
+      "Tracked seed 374373719: RMSE=5.930, R²=0.961\n",
+      "Tracked seed 1166838137: RMSE=5.793, R²=0.962\n",
       "\n",
       "✓ Tracked 3 experiments\n"
      ]
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ca8727e5",
    "metadata": {},
    "outputs": [
@@ -294,32 +305,32 @@
       "2  ml_tracking_demo_regression_seed1166838137           1   3662338350   \n",
       "\n",
       "         seed sub_seed  current_seed sampling_method     ml_task  metric_mae  \\\n",
-      "0  1709912838     None    1709912838          simple  regression    4.374855   \n",
-      "1   374373719     None     374373719          simple  regression    4.184014   \n",
-      "2  1166838137     None    1166838137          simple  regression    4.291601   \n",
+      "0  1709912838     None    1709912838          simple  regression    4.742934   \n",
+      "1   374373719     None     374373719          simple  regression    4.744083   \n",
+      "2  1166838137     None    1166838137          simple  regression    4.634143   \n",
       "\n",
       "   metric_r2  metric_rmse         meta_model  meta_n_samples  \\\n",
-      "0   0.968750     5.468568  linear_regression             100   \n",
-      "1   0.985075     5.230018  linear_regression             100   \n",
-      "2   0.986842     5.364501  linear_regression             100   \n",
+      "0   0.955179     5.928668  linear_regression             100   \n",
+      "1   0.960708     5.930104  linear_regression             100   \n",
+      "2   0.961860     5.792678  linear_regression             100   \n",
       "\n",
       "                    timestamp  \n",
-      "0  2025-11-02T23:37:29.213248  \n",
-      "1  2025-11-02T23:37:29.214630  \n",
-      "2  2025-11-02T23:37:29.214630  \n",
+      "0  2025-11-03T00:41:26.954905  \n",
+      "1  2025-11-03T00:41:26.954905  \n",
+      "2  2025-11-03T00:41:26.955407  \n",
       "\n",
       "Shape: (3, 14)\n",
       "\n",
       "Metric Statistics:\n",
       "       metric_rmse  metric_r2  metric_mae\n",
       "count     3.000000   3.000000    3.000000\n",
-      "mean      5.354362   0.980222    4.283490\n",
-      "std       0.119598   0.009974    0.095678\n",
-      "min       5.230018   0.968750    4.184014\n",
-      "25%       5.297259   0.976912    4.237807\n",
-      "50%       5.364501   0.985075    4.291601\n",
-      "75%       5.416535   0.985959    4.333228\n",
-      "max       5.468568   0.986842    4.374855\n",
+      "mean      5.883817   0.959249    4.707053\n",
+      "std       0.078931   0.003571    0.063145\n",
+      "min       5.792678   0.955179    4.634143\n",
+      "25%       5.860673   0.957944    4.688538\n",
+      "50%       5.928668   0.960708    4.742934\n",
+      "75%       5.929386   0.961284    4.743509\n",
+      "max       5.930104   0.961860    4.744083\n",
       "\n",
       "✓ Exported to CSV!\n"
      ]
@@ -351,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "729fba86",
    "metadata": {},
    "outputs": [
@@ -369,10 +380,10 @@
       "Accuracy by method:\n",
       "                  mean    std\n",
       "sampling_method              \n",
-      "cluster          0.847  0.061\n",
-      "simple           0.889  0.033\n",
-      "stratified       0.918  0.044\n",
-      "systematic       0.854  0.039\n"
+      "cluster          0.922  0.014\n",
+      "simple           0.897  0.065\n",
+      "stratified       0.888  0.061\n",
+      "systematic       0.825  0.025\n"
      ]
     }
    ],
